--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,56 @@
-name: build.yml
+name: "Build Kotbusta Docker"
+
 on:
+  - push
+  - pull_request
 
 jobs:
+  build:
+    name: "Build Application"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          java-version: "24"
+          distribution: "liberica"
+      - uses: gradle/actions/setup-gradle@v4
+      - run: ./gradlew distTar
+      - uses: actions/upload-artifact@v4
+        with:
+          name: "Kotlin Application"
+          path: "build/distributions/kotbusta.tar"
+          retention-days: 1
+  build-and-push-image:
+    name: "Build Docker Image"
+    if: ${{ github.ref == 'refs/heads/main' }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+        with:
+          name: "Kotlin Application"
+          path: "build/distributions/"
+      - name: "Untar files"
+        run: mkdir -p build/install && tar -xvf build/distributions/kotbusta.tar -C $_
+      - name: "Set up Docker Buildx"
+        uses: docker/setup-buildx-action@v3
+      - name: "Login to GHCR"
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password:  ${{ secrets.GITHUB_TOKEN }}
+      - name: "Build and push"
+        uses: docker/build-push-action@v6
+        with:
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: |
+            ghcr.io/heapy/kotbusta:main
+            ghcr.io/heapy/kotbusta:${{ github.sha }}
+          labels: |
+            org.opencontainers.image.title=Kotbusta
+            org.opencontainers.image.description=Digital library for Flibusta archives
+            org.opencontainers.image.source=https://github.com/Heapy/kotbusta
