--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,6 @@ jobs:
           path: "build/distributions/"
       - name: "Untar files"
         run: mkdir -p build/install && tar -xvf build/distributions/kotbusta.tar -C $_
-      - run: ls -lRa
       - name: "Set up Docker Buildx"
         uses: docker/setup-buildx-action@v3
       - name: "Login to GHCR"
@@ -51,6 +50,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           platforms: linux/amd64,linux/arm64
+          context: .
           push: true
           tags: |
             ghcr.io/heapy/kotbusta:main
