--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-kotlin = "2.2.0"
+kotlin = "2.2.20-Beta2"
 komok = "1.0.13"
 logback = "1.5.18"
 sqlite-jdbc = "3.50.3.0"
@@ -7,6 +7,8 @@ kotlinx-serialization = "1.9.0"
 
 [libraries]
 komok-tech-logging = { module = "io.heapy.komok:komok-tech-logging", version.ref = "komok"  }
+komok-tech-to-be-injected = { module = "io.heapy.komok:komok-tech-to-be-injected", version.ref = "komok"  }
+komok-tech-config-dotenv = { module = "io.heapy.komok:komok-tech-config-dotenv", version.ref = "komok"  }
 logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback"}
 sqlite-jdbc = { module = "org.xerial:sqlite-jdbc", version.ref = "sqlite-jdbc" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
