Refactor: Remove SQLite-based database code, introduce PostgreSQL integration via jOOQ
- Migrated database schema initialization to PostgreSQL with `dataops` module and associated SQL migrations.
- Removed `DatabaseInitializer` and `QueryExecutor`, along with SQLite-specific code.
- Introduced `JooqTransactionProvider` and transaction DSL for streamlined transaction management.
- Added jOOQ generated code for database access.
- Integrated `DispatchersModule` for coroutine dispatcher configuration.
- Updated build configuration to include new dependencies and `dataops` module.
- Refactored services and parsers to remove database dependencies where applicable.

--- a/.env.example
+++ b/.env.example
@@ -8,14 +8,15 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 SESSION_SIGN_KEY=
 SESSION_ENCRYPT_KEY=
 
-# Database path (optional, defaults to data/kotbusta.db)
-# DATABASE_PATH=data/database/kotbusta.db
+# Database connection settings
+KOTBUSTA_POSTGRES_HOST=localhost
+KOTBUSTA_POSTGRES_PORT=9578
+KOTBUSTA_POSTGRES_USER=kotbusta
+KOTBUSTA_POSTGRES_PASSWORD=kotbusta
+KOTBUSTA_POSTGRES_DATABASE=kotbusta
 
 # Books data path (required - path to your flibusta data)
 # BOOKS_DATA_PATH=/path/to/your/flibusta/books
-
-# Conversion service URL (optional, defaults to http://conversion-service:8081)
-# CONVERSION_SERVICE_URL=http://conversion-service:8081
 
 # Admin email address used for granting administrative privileges
 # ADMIN_EMAIL=your_admin_email_here
