Add support for configurable static file serving
- Introduced `StaticFilesConfig` for managing static file settings.
- Updated `.env.example` with new variables: `KOTBUSTA_STATIC_FILES_PATH` and `KOTBUSTA_STATIC_FILES_USE_RESOURCES`.
- Modified `staticFilesRoute` to utilize configurable paths and resource usage.

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,7 @@ KOTBUSTA_BOOKS_DATA_PATH=/path/to/your/flibusta/books
 
 # Admin email address used for granting administrative privileges
 KOTBUSTA_ADMIN_EMAIL=your_admin_email_here
+
+# Development-only variables for frontend development
+KOTBUSTA_STATIC_FILES_PATH=src/main/resources/static
+KOTBUSTA_STATIC_FILES_USE_RESOURCES=false
