--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,9 @@
 [versions]
-flyway = "11.10.5"
-hikari = "7.0.0"
-jooq = "3.20.5"
+flyway = "11.12.0"
+hikari = "7.0.2"
+jooq = "3.20.7"
 komok = "1.0.13"
-kotlin = "2.2.20-Beta2"
+kotlin = "2.2.20"
 kotlinx-serialization = "1.9.0"
 logback = "1.5.18"
 postgresql = "42.7.7"
