--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,9 +12,9 @@ updates:
       time: "04:00"
     open-pull-requests-limit: 10
     reviewers:
-      - "Heapy"
+      - "Heapy/maintainers-kotbusta"
     assignees:
-      - "Heapy"
+      - "Heapy/maintainers-kotbusta"
     commit-message:
       prefix: "gradle"
       prefix-development: "gradle"
@@ -32,9 +32,9 @@ updates:
       time: "04:00"
     open-pull-requests-limit: 5
     reviewers:
-      - "Heapy"
+      - "Heapy/maintainers-kotbusta"
     assignees:
-      - "Heapy"
+      - "Heapy/maintainers-kotbusta"
     commit-message:
       prefix: "docker"
       include: "scope"
@@ -51,9 +51,9 @@ updates:
       time: "04:00"
     open-pull-requests-limit: 5
     reviewers:
-      - "Heapy"
+      - "Heapy/maintainers-kotbusta"
     assignees:
-      - "Heapy"
+      - "Heapy/maintainers-kotbusta"
     commit-message:
       prefix: "actions"
       include: "scope"
