Migrate from PostgreSQL to SQLite, update database schema, refactor configuration, and adapt project dependencies and scripts accordingly.

--- a/.env.example
+++ b/.env.example
@@ -9,12 +9,8 @@ KOTBUSTA_GOOGLE_REDIRECT_URI=http://localhost:8080/callback
 KOTBUSTA_SESSION_SIGN_KEY=
 KOTBUSTA_SESSION_ENCRYPT_KEY=
 
-# Database connection settings
-KOTBUSTA_POSTGRES_HOST=localhost
-KOTBUSTA_POSTGRES_PORT=9578
-KOTBUSTA_POSTGRES_USER=kotbusta
-KOTBUSTA_POSTGRES_PASSWORD=kotbusta
-KOTBUSTA_POSTGRES_DATABASE=kotbusta
+# Path to SQLite database file
+KOTBUSTA_DB_PATH=kotbusta.db
 
 # Books data path (required - path to your flibusta data)
 KOTBUSTA_BOOKS_DATA_PATH=/path/to/your/flibusta/books
