--- a/deploy/prod/.env.example
+++ b/deploy/prod/.env.example
@@ -9,18 +9,14 @@ KOTBUSTA_GOOGLE_REDIRECT_URI=http://localhost:8080/callback
 KOTBUSTA_SESSION_SIGN_KEY=
 KOTBUSTA_SESSION_ENCRYPT_KEY=
 
-# Database connection settings
-KOTBUSTA_POSTGRES_HOST=database
-KOTBUSTA_POSTGRES_PORT=5432
-KOTBUSTA_POSTGRES_USER=kotbusta
-KOTBUSTA_POSTGRES_PASSWORD=kotbusta
-KOTBUSTA_POSTGRES_DATABASE=kotbusta
+# Path to SQLite database file (will be mounted inside the container)
+KOTBUSTA_DB_PATH=/data/db/kotbusta.db
 
 # Admin email address used for granting administrative privileges
 KOTBUSTA_ADMIN_EMAIL=your_admin_email_here
 
-# Path to store postgres data
-KOTBUSTA_DB_DATA_PATH_LOCAL=/mnt/postgres
+# Path to store SQLite database on host
+KOTBUSTA_DB_DATA_PATH_LOCAL=/mnt/kotbusta-db
 
 # Path with a library stored in Flibusta format
 KOTBUSTA_BOOKS_DATA_PATH_LOCAL=/mnt/flibusta
