--- a/deploy/prod/docker-compose.yml
+++ b/deploy/prod/docker-compose.yml
@@ -2,18 +2,6 @@
 name: "kotbusta-prod"
 
 services:
-  database:
-    image: "postgres:18.0"
-    restart: "always"
-    mem_limit: "128m"
-    memswap_limit: "0m"
-    environment:
-      POSTGRES_USER: "${KOTBUSTA_POSTGRES_USER}"
-      POSTGRES_PASSWORD: "${KOTBUSTA_POSTGRES_PASSWORD}"
-      POSTGRES_DB: "${KOTBUSTA_POSTGRES_DATABASE}"
-    volumes:
-      - "pgdata:/var/lib/postgresql/data"
-
   service:
     image: "ghcr.io/heapy/kotbusta:main"
     restart: "always"
@@ -26,19 +14,16 @@ services:
       KOTBUSTA_GOOGLE_REDIRECT_URI: "${KOTBUSTA_GOOGLE_REDIRECT_URI}"
       KOTBUSTA_SESSION_SIGN_KEY: "${KOTBUSTA_SESSION_SIGN_KEY}"
       KOTBUSTA_SESSION_ENCRYPT_KEY: "${KOTBUSTA_SESSION_ENCRYPT_KEY}"
-      KOTBUSTA_POSTGRES_HOST: "${KOTBUSTA_POSTGRES_HOST}"
-      KOTBUSTA_POSTGRES_PORT: "${KOTBUSTA_POSTGRES_PORT}"
-      KOTBUSTA_POSTGRES_USER: "${KOTBUSTA_POSTGRES_USER}"
-      KOTBUSTA_POSTGRES_PASSWORD: "${KOTBUSTA_POSTGRES_PASSWORD}"
-      KOTBUSTA_POSTGRES_DATABASE: "${KOTBUSTA_POSTGRES_DATABASE}"
+      KOTBUSTA_DB_PATH: "${KOTBUSTA_DB_PATH}"
       KOTBUSTA_ADMIN_EMAIL: "${KOTBUSTA_ADMIN_EMAIL}"
       KOTBUSTA_BOOKS_DATA_PATH: "/data/books"
     volumes:
+      - "dbdata:/data/db"
       - "books:/data/books"
     ports:
       - "8080:8080"
 volumes:
-  pgdata:
+  dbdata:
     driver: local
     driver_opts:
       type: none
