--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,12 +7,12 @@ kotlin = "2.2.21"
 kotlinx-serialization = "1.9.0"
 kotlinx-coroutines = "1.10.2"
 logback = "1.5.20"
-postgresql = "42.7.8"
+sqlite = "3.50.3.0"
 junit = "6.0.0"
 aws-sdk = "1.5.69"
 
 [libraries]
-flyway-database-postgresql = { module = "org.flywaydb:flyway-database-postgresql", version.ref = "flyway" }
+flyway-core = { module = "org.flywaydb:flyway-core", version.ref = "flyway" }
 
 hikari = { module = "com.zaxxer:HikariCP", version.ref = "hikari" }
 
@@ -29,7 +29,7 @@ kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-c
 
 logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback"}
 
-postgresql = { module = "org.postgresql:postgresql", version.ref = "postgresql" }
+sqlite-jdbc = { module = "org.xerial:sqlite-jdbc", version.ref = "sqlite" }
 
 aws-sdk-ses = { module = "aws.sdk.kotlin:ses", version.ref = "aws-sdk" }
 
