--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ flyway = "11.15.0"
 hikari = "7.0.2"
 jooq = "3.20.8"
 komok = "1.0.13"
-kotlin = "2.2.21"
+kotlin = "2.3.0-Beta2"
 kotlinx-serialization = "1.9.0"
 kotlinx-coroutines = "1.10.2"
 logback = "1.5.20"
