Add AWS credentials to `.env.example` and simplify `SesClient` configuration in `ApplicationModule`.

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,8 @@ KOTBUSTA_ADMIN_EMAIL=your_admin_email_here
 
 # Development-only variables for frontend development
 KOTBUSTA_STATIC_FILES_PATH=src/main/resources/static
+
+# AWS access credentials
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
