Update `.env.example` and `.gitignore` for adjusted database path configuration.

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ KOTBUSTA_SESSION_SIGN_KEY=
 KOTBUSTA_SESSION_ENCRYPT_KEY=
 
 # Path to SQLite database file
-KOTBUSTA_DB_PATH=kotbusta.db
+KOTBUSTA_DB_PATH=./.database/kotbusta.db
 
 # Books data path (required - path to your flibusta data)
 KOTBUSTA_BOOKS_DATA_PATH=/path/to/your/flibusta/books
