--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,10 @@ jobs:
         with:
           java-version: "25"
           distribution: "corretto"
-      - run: ./gradlew distTar
+      - name: "Unpack test data"
+        run: src/test/resources/unpack-flibusta-sample.sh
+      - name: "Run tests and build distribution"
+        run: ./gradlew test distTar
       - uses: actions/upload-artifact@v5
         with:
           name: "Kotlin Application"
